fix main dash alignment

--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -974,3 +974,7 @@ width: 160px;
  text-align: center;  
 }
  
+#main-content{
+  align-items: flex-start;
+  align-content: flex-start;
+}
